--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <main ng-view></main>
         <script src="app.js">
         </script>
+        <script src="/component/post-component-controller.js"></script>
+        <script src="filter.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     </body>
