added loader and api response handling

--- a/frontendSocialFeed/index.html
+++ b/frontendSocialFeed/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
     <header ng-include="'navBar.html'"></header>
-    <main ng-view></main>
+    <main ng-view>
+      
+    </main>
     <script src="app.js"></script>
 
     <script src="filter.js"></script>
@@ -38,7 +40,7 @@
     <script src="service/post-service.js"></script>
     <script src="service/comment-service.js"></script>
     <script src="service/likedislike-service.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-toastr/2.1.1/angular-toastr.min.js" integrity="sha512-XiGbThsJTqL+wv4oeCnh+LFwYXi1a3xv8YCgzB0rMNmWzR+F3S4qw2sfIzR2WjlTNCJeMc1vD/fAdATUhv3LGw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
