--- a/frontendSocialFeed/index.html
+++ b/frontendSocialFeed/index.html
@@ -24,6 +24,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+
     <!-- <script src="app/app.js"></script> -->
   </head>
   <body>
