--- a/frontendSocialFeed/navBar.html
+++ b/frontendSocialFeed/navBar.html
@@ -1,27 +1,14 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">E-Feed</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active navnew" aria-current="page" href="#!/home">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link navnew" href="#!/feed">FEED</a>
-        </li>
-       
-        <li class="nav-item">
-          <a class="nav-link navnew" href="#!about">ABOUT</a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <img class="search-button"/>
-
+<div class="content1">
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <span class="nav-brand">E-Feed</span>
+      <form class="d-flex">
+        <a class="navbar-brand" href="#!/home"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;HOME</a>
+        <a class="navbar-brand" href="#!/about">ABOUT</a>
+        <a class="navbar-brand" href="#!/feed">FEED</a>
       </form>
     </div>
+      </ul>
+    </nav>
   </div>
-</nav>
+
