added question component and controller

--- a/frontendSocialFeed/index.html
+++ b/frontendSocialFeed/index.html
@@ -40,6 +40,7 @@
     <!-- <script src="/router/postRouter.js"></script> -->
 
     <script src="component/post-component-controller.js"></script>
+    <script src="component/question-component-controller.js"></script>
     <script src="service/post-service.js"></script>
     <script src="service/comment-service.js"></script>
     <script src="service/likedislike-service.js"></script>
