--- a/frontendSocialFeed/navBar.html
+++ b/frontendSocialFeed/navBar.html
@@ -1,11 +1,15 @@
 <div class="content1">
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <span class="nav-brand">E-Feed</span>
+      <span class="nav-brand">E-Feed       
+      </span>
       <form class="d-flex">
         <a class="navbar-brand" href="#!/home"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;HOME</a>
         <a class="navbar-brand" href="#!/about">ABOUT</a>
         <a class="navbar-brand" href="#!/feed">FEED</a>
+        <lottie-player src="https://lottie.host/aa0ab90d-bc4e-412e-9595-c33e641d982e/VNx7wnR852.json"  speed="1" style="width: 100px; height: 55px; margin-top: 1px; " loop="true"         
+      autoplay="true"
+      mode="normal" ></lottie-player>
       </form>
     </div>
       </ul>
